fix-css-overflow-only-scrol-x

--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -43,7 +43,7 @@ h2 {
   width: 100%;
   padding: 5px 0;
   font-size: 15px;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 
 .table .td:last-child {
